refactor: для логгирования использовать @SLF4J (log4j.rootLogger).
refactor: для хранения записей в FilmController.java и UserController.java использовать реализацию ConcurrentHashMap вместо HashMap.

refactor: использовать метод <StringUtils.isBlank> от [org.apache.commons] для определения null имени пользователя.

refactor: исключение ValidationException.java наследовать от Exception вместо IllegalArgumentException для расширения охвата возможных исключений.